# erlang-gui

./: .formatter.exs  .gitignore  Cargo.toml  README.md  mix.exs
analysis/data/: 2020-03-28-port-receive-latencies-with-fixed-message.csv  2020-03-28-port-receive-latencies-with-variable-messages.csv  2020-03-30-memmap-port-recv-send-latency-small-msg.csv  2020-03-30-memmap-port-recv-send-latency.csv  2020-03-30-minimum-port-example-over-stdio.csv  2020-04-02-cets-1000-empty-folds.csv  mouse_move_event_latencies.csv  mouse_move_event_latencies_with_function_handler.csv  mouse_move_event_latencies_with_function_handler_and_local_catch.csv  mouse_move_event_latencies_with_function_handler_but_no_catches.csv  mouse_move_event_latencies_with_max_priority.csv
apps/binbuf/: mix.exs
apps/chalk/: mix.exs
apps/euclid/: mix.exs
apps/fastmap/: mix.exs
apps/hello_world/: mix.exs
apps/lively/: erl_crash.dump  mix.exs
apps/memmap/: mix.exs
apps/scratchpad/: mix.exs
apps/skia/: .gitignore  README.md  mix.exs
apps/vulkan/: .gitignore  README.md  (+1 more)
assets/: animation_1.mkv
bench/: cets_ts  chalk_pipeline_flush.out  chalk_start.out  ets_ts  medium_cets_ts  small_cets_ts  stack_to_flame.sh  text_field_set_text.out  text_field_start.out  ts
native/chalk/: Cargo.toml
native/chalk/src/: beam_io.rs  bin.rs  command.rs  command_queue.rs  compositor.rs  event_codec.rs  fps_counter.rs  render_loop.rs
native/erlang-etf/: Cargo.toml
native/erlang-etf/src/: lib.rs
native/erlang-skia/: Cargo.toml
native/erlang-skia/src/: canvas.rs  lib.rs
spec/: Chalk_Pipeline.tla
(+195 files in other folders)
