[package]
name = "erlang-skia"
version = "0.1.0"
authors = ["Leandro Ostera <leandro@ostera.io>"]
edition = "2018"

[lib]
name = "erlskia"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.21.0"
lazy_static = "1.0"
skia-safe = { path = "/home/ostera/repos/github.com/rust-skia/rust-skia/skia-safe" }
